kubernetes/000-marketplace-frontend-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: marketplace-frontend
  labels:
    name: marketplace-frontend
---
