kubernetes/020-marketplace-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: marketplace-frontend
  namespace: marketplace-frontend
  labels:
    app: marketplace-frontend
spec:
  selector:
    matchLabels:
      app: marketplace-frontend
  replicas: 1
  template:
    metadata:
      labels:
        app: marketplace-frontend
    spec:
      imagePullSecrets:
      - name: docker-registry
      containers:
      - name: marketplace-frontend
        image: ${MARKETPLACE_IMAGE}:${MARKETPLACE_IMAGETAG}
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
          name: marketplace
        volumeMounts:
        - name: marketplace-frontend-secret
          mountPath: /app/.env.production
          subPath: .env.production
      volumes:
        - name: marketplace-frontend-secret
          secret:
            secretName: marketplace-frontend-secret
      restartPolicy: Always
---
