kubernetes/030-marketplace-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: marketplace-frontend
  namespace: marketplace-frontend
spec:
  selector:
    app: marketplace-frontend
  type: ClusterIP
  ports:
  - name: marketplace
    protocol: TCP
    port: 3000
    targetPort: 3000
---
